# server/api/catalog/index2.js
@@ -5,7 +5,7 @@ var controller = require('./catalog.controller.js');
 
 var router = express.Router();
 
-router.get('/category/:categoryId', controller.categoryProducts);
+router.get('/category/:categoryId', controller.categoryProductsV2);
 router.get('/product/:productId', controller.productView);
 //router.get('/product/link/:productId', controller.productLinkView);
 //router.post('/create', controller.create);
